--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
     "inferno": "^3.1.0",
-    "inferno-component": "^3.1.0"
+    "inferno-component": "^3.1.0",
+    "inferno-create-element": "^3.1.0",
+    "inferno-devtools": "^3.1.0"
   },
   "devDependencies": {
     "babel-plugin-inferno": "^3.2.0",
+    "eslint-plugin-inferno": "^6.10.4",
     "inferno-scripts": "3.0.0"
   },
   "scripts": {
